--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<footer class="footer mt-auto py-3 bg-light" th:fragment="footer">
+<footer class="footer mt-auto py-3 bg-transparency" th:fragment="footer">
     <div class="container">
         <span class="text-muted">2022 @JAEGUIN</span>
     </div>
