--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -12,7 +12,7 @@
             <h1 class="h3 m-3 fw-normal">로그인</h1>
 
             <div class="form-floating m-3">
-                <input type="text" class="form-control" id="email" placeholder="아이디를 입력하세요." required="required">
+                <input type="text" class="form-control" id="email" placeholder="이메일을 입력하세요." required="required">
                 <label for="email">이메일</label>
             </div>
             <div class="form-floating m-3">
@@ -21,7 +21,7 @@
             </div>
         </form>
         <button class="btn btn-success" id="btn-login">로그인</button>
-        <button class="btn btn-success" th:onClick="|location.href='@{/user/register}'|">회원가입</button>
+        <a class="btn btn-success" href="/user/register">회원가입</a>
     </div>
 </main>
 
