--- a/src/main/resources/templates/user/registerForm.html
+++ b/src/main/resources/templates/user/registerForm.html
@@ -23,24 +23,24 @@
             </div>
             <div class="form-floating m-3">
                 <input type="text" class="form-control" id="nickname" placeholder="닉네임을 입력하세요." required
-                       minlength="4" size="20">
+                       minlength="2" size="20">
                 <label for="nickname">닉네임</label>
                 <div class="valid-feedback">
                     very nice!
                 </div>
                 <div class="invalid-feedback">
-                    닉네임은 4자 이상 입력해야 합니다.
+                    닉네임은 2자 이상 입력해야 합니다.
                 </div>
             </div>
             <div class="form-floating m-3">
                 <input type="text" class="form-control" id="username" placeholder="아이디를 입력하세요." required
-                       minlength="4" size="20">
+                       minlength="2" size="20">
                 <label for="username">이름</label>
                 <div class="valid-feedback">
                     good!
                 </div>
                 <div class="invalid-feedback">
-                    이름은 4자 이상 입력해야 합니다.
+                    이름은 2자 이상 입력해야 합니다.
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </form>
-        <button class="btn btn-success" id="btn-register">회원가입</button>
+        <button class="btn btn-success" id="btn-save">회원가입</button>
     </div>
 </main>
 
