--- a/src/main/resources/templates/user/registerForm.html
+++ b/src/main/resources/templates/user/registerForm.html
@@ -15,7 +15,7 @@
                 <input type="email" class="form-control" id="email" placeholder="이메일을 입력하세요." required>
                 <label for="email">이메일</label>
                 <div class="valid-feedback">
-                    nice!
+                    OK!
                 </div>
                 <div class="invalid-feedback">
                     이메일 형식으로 입력해야 합니다.
@@ -26,7 +26,7 @@
                        minlength="2" size="20">
                 <label for="nickname">닉네임</label>
                 <div class="valid-feedback">
-                    very nice!
+                    OK!
                 </div>
                 <div class="invalid-feedback">
                     닉네임은 2자 이상 입력해야 합니다.
@@ -37,7 +37,7 @@
                        minlength="2" size="20">
                 <label for="username">이름</label>
                 <div class="valid-feedback">
-                    good!
+                    OK!
                 </div>
                 <div class="invalid-feedback">
                     이름은 2자 이상 입력해야 합니다.
@@ -47,13 +47,26 @@
             <div class="form-floating m-3">
                 <input type="password" class="form-control" id="password" placeholder="패스워드를 입력하세요." required
                        minlength="8" size="20">
-                <label for="password">패스워드</label>
+                <label for="password">비밀번호</label>
                 <div class="valid-feedback">
-                    very good!
+                    ok!
                 </div>
                 <div class="invalid-feedback">
                     패스워드는 8자 이상 입력해야 합니다.
                 </div>
+            </div>
+
+            <div class="form-floating m-3">
+                <input type="password" class="form-control" id="password2" placeholder="패스워드를 입력하세요." required
+                       minlength="8" size="20" onkeyup="fn_compare_pw()">
+                <label for="password">비밀번호 확인</label>
+                <div class="valid-feedback">
+                    ok!
+                </div>
+                <div class="invalid-feedback">
+                    패스워드는 8자 이상 입력해야 합니다.
+                </div>
+                <span id="s_result"></span>
             </div>
         </form>
         <button class="btn btn-success" id="btn-save">회원가입</button>
