--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:fragment="head (title)">
     <!-- Required meta tags -->
@@ -33,7 +33,10 @@
                         <a class="nav-link" href="/board/list">게시판</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/login">로그인</a>
+                        <a sec:authorize="isAnonymous()" class="nav-link" href="/user/login">로그인</a>
+                    </li>
+                    <li class="nav-item">
+                        <a sec:authorize="isAuthenticated()" class="nav-link" href="/logout">로그아웃</a>
                     </li>
                 </ul>
                 <form class="d-flex">
