--- a/src/main/resources/templates/board/listForm.html
+++ b/src/main/resources/templates/board/listForm.html
@@ -11,30 +11,26 @@
     <div class="container">
         <div class="p-2"></div>
 
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div th:each="board : ${boardlist}" class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
                 <a href="#" class="a-title">
-                    <h3 class="mb-0 title" style="padding-bottom: 10px;">제목</h3>
+                    <h3 class="mb-0 title" style="padding-bottom: 10px;" th:text="${board.title}"></h3>
                 </a>
-                <p class="card-text mb-auto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia repellendus dolore quibusdam voluptatibus libero consectetur, autem assumenda quis accusamus ratione qui. Nobis sit cumque deleniti, facilis praesentium magni voluptates
-                    perspiciatis!LoremLoremLoremLoremLoremLoremLoremLorem
-                </p>
-                <div class="mb-1 text-muted" style="padding-top: 15px;">날짜</div>
+                <div>
+                <td th:text="${board.user.nickname}"></td>
+                    <span>/</span>
+                <td class="mb-1 text-muted" style="padding-top: 15px;" th:text="${#temporals.format(board.regTime, 'yyyy-MM-dd hh:mm')}"></td>
+                </div>
+                <hr>
+                <div class="card-text mb-auto" th:text="${board.content}">
+                </div>
+
             </div>
         </div>
 
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-                <a href="#" class="a-title">
-                    <h3 class="mb-0 title" style="padding-bottom: 10px;">제목</h3>
-                </a>
-                <p class="card-text mb-auto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia repellendus dolore quibusdam voluptatibus libero consectetur, autem assumenda quis accusamus ratione qui. Nobis sit cumque deleniti, facilis praesentium magni voluptates
-                    perspiciatis!LoremLoremLoremLoremLoremLoremLoremLorem
-                </p>
-                <div class="mb-1 text-muted" style="padding-top: 15px;">날짜</div>
-            </div>
+        <div class="mt-3 text-right" align="center">
+            <a class="btn btn-primary" href="/board/write">글작성</a>
         </div>
-
     </div>
 </main>
 
