게시글 상세 구현

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,3 +15,12 @@
     color: #15751b;
     text-decoration: underline;
 }
+
+p {
+    word-break: break-all;
+    text-align: left;
+}
+
+h3 {
+    word-break: break-all;
+}
