--- a/src/main/resources/templates/board/listForm.html
+++ b/src/main/resources/templates/board/listForm.html
@@ -13,7 +13,7 @@
 
         <div th:each="board : ${boardlist}" class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
-                <a href="#" class="a-title">
+                <a th:href="@{/board/{id}(id=${board.id})}" class="a-title">
                     <h3 class="mb-0 title" style="padding-bottom: 10px;" th:text="${board.title}"></h3>
                 </a>
                 <div>
