--- a/src/main/resources/templates/board/detailForm.html
+++ b/src/main/resources/templates/board/detailForm.html
@@ -8,7 +8,7 @@
 
 
 <main class="form-signin" style="max-width: 100%;">
-  <div class="container border rounded flex-md-row mb-4 shadow-sm h-md-250">
+  <div>
 
     <div class="form-floating m-3">
       <h3 th:text="${board.title}" style="margin-bottom: 50px;"></h3>
@@ -20,7 +20,7 @@
     </div>
 
     <hr/>
-    <div class="form-floating m-3">
+    <div class="form-floating m-3"  align="left">
       <p th:text="${board.content}"></p>
     </div>
 
