--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,13 @@
         <h1>Welcome User</h1>
         <p>from jaeguin</p>
     </div>
+    <div align="center">
+        <div class="d-grid gap-2">
+            <button type="button" class="btn btn-outline-dark rounded-pill mt-1"
+                    th:onClick="|location.href='@{/board/list}'|">시작하기</button>
+        </div>
+
+    </div>
 </main>
 
 <footer th:replace="layout/footer :: footer"></footer>
