게시판 작성폼 수정(쓰기 좋게)

--- a/src/main/resources/templates/board/writeForm.html
+++ b/src/main/resources/templates/board/writeForm.html
@@ -7,7 +7,7 @@
 <header th:replace="layout/header :: header"></header>
 
 <main class="form-signin" style="max-width: 100%;">
-    <div class="container border rounded flex-md-row mb-4 shadow-sm h-md-250">
+    <div>
         <form>
             <h1 class="h3 m-3 fw-bolder" align="left">글쓰기</h1>
             <div class="form-floating m-3">
