--- a/src/main/resources/templates/board/detailForm.html
+++ b/src/main/resources/templates/board/detailForm.html
@@ -31,6 +31,7 @@
 
   </br></br></br></br>
   <div th:if="${#authentication.principal.user.id} == ${board.user.id}">
+    <a th:href="@{/board/{id}/update(id=${board.id})}" class="btn btn-warning" id="btn-update">수정</a>
     <button class="btn btn-danger" id="btn-delete">삭제</button>
   </div>
   </br>
