--- a/src/main/resources/templates/board/writeForm.html
+++ b/src/main/resources/templates/board/writeForm.html
@@ -22,7 +22,7 @@
         </form>
         <div class="mt-3 text-right">
             <button type="button" class="btn btn-primary" id="btn-save" style="max-width: 250px;">작성</button>
-            <a class="btn btn-primary" href="/board/list">취소</a></br></br>
+            <a class="btn btn-danger" href="/board/list">취소</a></br></br>
         </div>
 
 
