--- a/src/main/resources/templates/board/updateForm.html
+++ b/src/main/resources/templates/board/updateForm.html
@@ -10,7 +10,8 @@
     <div>
         <form>
             <h1 class="h3 m-3 fw-bolder" align="left">글수정</h1>
-            <input type="hidden" id="id" th:value="${board.id}">
+<!--            <input type="hidden" id="id" th:value="${board.id}">-->
+            <div style="display:none" th:text="${board.id}" id="id"></div>
             <div class="form-floating m-3">
                 <input type="text" th:value="${board.title}" class="form-control" id="title" placeholder="제목을 입력하세요." required>
                 <label for="title">제목</label>
