--- a/src/main/resources/templates/board/listForm.html
+++ b/src/main/resources/templates/board/listForm.html
@@ -20,6 +20,8 @@
                 <td th:text="${board.user.nickname}"></td>
                     <span>/</span>
                 <td class="mb-1 text-muted" style="padding-top: 15px;" th:text="${#temporals.format(board.regTime, 'yyyy-MM-dd hh:mm')}"></td>
+                    <span>/</span>
+                조회수 : <td th:text="${board.count}"></td>
                 </div>
                 <hr>
                 <div class="card-text mb-auto" th:text="${board.content}">
