--- a/src/main/resources/templates/board/listForm.html
+++ b/src/main/resources/templates/board/listForm.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="p-2"></div>
 
-        <div th:each="board : ${boardlist}" class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div th:each="board : ${boards}" class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
                 <a th:href="@{/board/{id}(id=${board.id})}" class="a-title">
                     <h3 class="mb-0 title" style="padding-bottom: 10px;" th:text="${board.title}"></h3>
@@ -28,6 +28,21 @@
                 </div>
 
             </div>
+        </div>
+
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:classappend="${1 == boards.pageable.pageNumber + 1} ? 'disabled' : '' ">
+                    <a class="page-link" th:href="@{/board/list/(page=${boards.pageable.pageNumber - 1})}"><</a>
+                </li>
+                <li class="page-item" th:classappend="${i == boards.pageable.pageNumber + 1} ? 'active' : '' " th:each="i : ${#numbers.sequence(startPage, endPage)}">
+                    <a class="page-link" th:href="@{/board/list/(page=${i - 1})}" th:text="${i}">1</a>
+                </li>
+                <li class="page-item" th:classappend="${boards.totalPages == boards.pageable.pageNumber + 1} ? 'disabled' : '' ">
+                    <a class="page-link" th:href="@{/board/list/(page=${boards.pageable.pageNumber + 1})}">></a>
+                </li>
+            </ul>
+        </nav>
         </div>
 
         <div class="mt-3 text-right" align="center">
