--- a/src/main/resources/templates/board/listForm.html
+++ b/src/main/resources/templates/board/listForm.html
@@ -33,13 +33,13 @@
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
                 <li class="page-item" th:classappend="${1 == boards.pageable.pageNumber + 1} ? 'disabled' : '' ">
-                    <a class="page-link" th:href="@{/board/list/(page=${boards.pageable.pageNumber - 1})}"><</a>
+                    <a class="page-link" th:href="@{/board/list/(page=${boards.pageable.pageNumber - 1}, search=${param.search})}"><</a>
                 </li>
                 <li class="page-item" th:classappend="${i == boards.pageable.pageNumber + 1} ? 'active' : '' " th:each="i : ${#numbers.sequence(startPage, endPage)}">
-                    <a class="page-link" th:href="@{/board/list/(page=${i - 1})}" th:text="${i}">1</a>
+                    <a class="page-link" th:href="@{/board/list/(page=${i - 1}, search=${param.search})}" th:text="${i}">1</a>
                 </li>
                 <li class="page-item" th:classappend="${boards.totalPages == boards.pageable.pageNumber + 1} ? 'disabled' : '' ">
-                    <a class="page-link" th:href="@{/board/list/(page=${boards.pageable.pageNumber + 1})}">></a>
+                    <a class="page-link" th:href="@{/board/list/(page=${boards.pageable.pageNumber + 1}, search=${param.search})}">></a>
                 </li>
             </ul>
         </nav>
