--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -39,8 +39,9 @@
                         <a sec:authorize="isAuthenticated()" class="nav-link" href="/logout">로그아웃</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex"  method="get" th:action="@{/board/list/?page=0&search=}">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                           id="search" name="search" th:value="${param.search}">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
