게시판 작성,수정,디테일 폼 서머노트 적용

--- a/src/main/resources/templates/board/listForm.html
+++ b/src/main/resources/templates/board/listForm.html
@@ -24,7 +24,7 @@
                 <td th:text="${board.user.nickname}"></td>
                 </div>
                 <hr>
-                <div class="card-text mb-auto" th:text="${board.content}">
+                <div class="card-text mb-auto" th:utext="${board.content}">
                 </div>
 
             </div>
