--- a/src/main/resources/templates/board/detailForm.html
+++ b/src/main/resources/templates/board/detailForm.html
@@ -22,8 +22,8 @@
     </div>
 
     <hr/>
-    <div class="form-floating m-3"  align="left">
-      <p th:text="${board.content}"></p>
+    <div class="form-floating m-3">
+      <p th:utext="${board.content}"></p>
     </div>
 
 
