--- a/src/main/resources/templates/board/updateForm.html
+++ b/src/main/resources/templates/board/updateForm.html
@@ -16,7 +16,7 @@
                 <label for="title">제목</label>
             </div>
             <div class="form-floating m-3">
-                <textarea class="form-control" th:text="${board.content}" rows="5" id="content" style="height: 450px;"></textarea>
+                <textarea class="form-control summernote" th:text="${board.content}" rows="5" id="content" style="height: 450px;"></textarea>
                 <label for="content">내용</label>
             </div>
 
@@ -27,6 +27,22 @@
         </div>
     </div>
 </main>
+
+<script>
+    $('.summernote').summernote({
+        tabsize: 2,
+        height: 400,
+        toolbar: [
+            ['style', ['style']],
+            ['font', ['bold', 'underline', 'clear']],
+            ['color', ['color']],
+            ['para', ['ul', 'ol', 'paragraph']],
+            ['table', ['table']],
+            ['insert', ['link', 'picture', 'video']],
+            ['view', ['fullscreen', 'codeview', 'help']]
+        ]
+    });
+</script>
 
 <footer th:replace="layout/footer :: footer"></footer>
 
