--- a/src/main/resources/templates/board/detailForm.html
+++ b/src/main/resources/templates/board/detailForm.html
@@ -34,19 +34,21 @@
     <a th:href="@{/board/{id}/update(id=${board.id})}" class="btn btn-warning">수정</a>
     <button class="btn btn-danger" id="btn-delete">삭제</button>
   </div>
-  </br>
+  </br></br>
 
 
   <div class="card">
     <div class="card-header">댓글 리스트</div>
     <ul id="reply--box" class="list-group">
+      <div th:each="reply : ${board.replyList}">
       <li id="reply--1" class="list-group-item d-flex justify-content-between">
-        <div>댓글 내용입니다!!</div>
+        <div th:text="${reply.content}"></div>
         <div class="d-flex">
-          <div class="font-italic">작성자 : jaeguin &nbsp;</div>
+          <div class="font-italic">작성자 : <td th:text="${reply.user.nickname}"></td></div>
           <button class="badge">삭제</button>
         </div>
       </li>
+      </div>
     </ul>
   </div>
   </br>
