--- a/src/main/resources/templates/board/detailForm.html
+++ b/src/main/resources/templates/board/detailForm.html
@@ -37,28 +37,35 @@
   </br></br>
 
 
+  <!-- 답글 -->
+  <input type="hidden" id="boardId" th:value="${board.id}">
   <div class="card">
     <div class="card-header">댓글 리스트</div>
-    <ul id="reply--box" class="list-group">
       <div th:each="reply : ${board.replyList}">
-      <li id="reply--1" class="list-group-item d-flex justify-content-between">
-        <div th:text="${reply.content}"></div>
-        <div class="d-flex">
-          <div class="font-italic">작성자 : <td th:text="${reply.user.nickname}"></td></div>
-          <button class="badge">삭제</button>
+      <li id="reply--1" class="list-group-item align-items-center">
+        <div>
+          <td th:text="${reply.user.nickname}"></td>&nbsp;:&nbsp;<td th:text="${reply.content}"></td><br>
+          <td th:text="${#temporals.format(reply.regTime, 'yyyy-MM-dd hh:mm')}"> </td>
+          <td th:if="${#authentication.principal.user.id} == ${reply.user.id}">
+            <button th:onclick="|replyIndex.replyDelete('${board.id}', '${reply.id}')|"
+                    class="badge btn-danger">삭제</button>
+          </td>
         </div>
       </li>
-      </div>
-    </ul>
+    </div>
   </div>
-  </br>
-  <div class="card">
-    <div class="card-body">
-      <textarea class="form-control" rows="1"></textarea>
-    </div>
-    <div class="card-footer">
-      <button class="btn btn-primary">등록</button>
-    </div>
+  <div class="card mb-2 mt-5">
+    <div class="card-header bg-light">댓글</div>
+    <form>
+      <div class="card-body">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <textarea class="form-control" id="reply-content" rows="1"></textarea></br>
+            <button id="reply-btn-save" type="button" class="btn btn-primary">등록</button>
+          </li>
+        </ul>
+      </div>
+    </form>
   </div>
   </br></br>
 
@@ -72,6 +79,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script th:src="@{/js/board.js}"></script>
+<script th:src="@{/js/reply.js}"></script>
 </body>
 
 </html>
